--- a/doc/main.tex
+++ b/doc/main.tex
@@ -29,7 +29,7 @@ Para generar en \textit{Phyton} el fichero con la lista de números aleatorios h
 
 Este código se encuentra en el fichero \textit{Fichero.py} en la carpeta de \textit{Phyton}.
 
-\includegraphics[width=11.5cm]{Fichero.png}
+\includegraphics[width=11.5cm]{fichero.PNG}
 
 Aquí podemos ver la captura del codigo. Como se extraen los argumentos y como se genera el fichero con el bucle for que genera números aleatorios.
 
@@ -52,7 +52,7 @@ Otra solución que podríamos haber adoptado son el ordenar la lista e ir buscan
 
 Como cabe de esperar, el orden de magnitud es mucho mayor al adoptado en nuestras soluciones.
 
-\includegraphics[width=11.5cm]{DibujarGráfica.PNG}
+\includegraphics[width=11.5cm]{dibujarGrafica.PNG}
 
 En esta función auxiliar podemos observar como utilizando matplotlib podemos dibujar una gráfica. En las tres primeras lineas dibujamos las líneas correspondientes a los tres métodos. Seguidamente colocamos el titulo y una leyenda. Para finalizar con la gráfica le damos nombre a los dos ejes.
 
@@ -69,7 +69,7 @@ Dado que se nos pide que la reserva de memoria se haga en \textit{Python}, debem
 
 En nuestro fichero \textit{Listas.py} utilizamos la biblioteca de \textit{Ctypes}.
 
-\includegraphics[width=11.5cm]{Definición.PNG}
+\includegraphics[width=11.5cm]{definicion.PNG}
 
 Para cargar la biblioteca compilada por nuestro makefile usaremos la librería os de python y le pasaremos la ruta.
 
