--- a/doc/main.tex
+++ b/doc/main.tex
@@ -104,4 +104,8 @@ En esta imagen podemos ver el uso de la herramienta line profile para el calculo
 
 Finalmente para terminar con el estudio del programa tenemos el estudio de la memoria. Como podemos ver el gran uso de memoria se debe al main. Esto es así por que en esta función es donde se crean tanto los nuevos sets y los nuevos diccionarios a parte de que es donde se reserva toda la memoria que se va a utilizar en C mediante el uso de ctypes. Es por esto que es de lo más normal del mundo que haya un crecimiento tan alto en esta parte del programa.
 
+\bibliographystyle{IEEEtranS}
+\nocite{*}
+\bibliography{bibliografia}
+
 \end{document}
